--- a/test_project/requirements.txt
+++ b/test_project/requirements.txt
@@ -9,6 +9,7 @@ filelock==3.0.12
 idna==3.2
 pipenv==2021.5.29
 platformdirs==2.3.0
+psycopg2-binary==2.9.1
 pycosat==0.6.3
 pytz==2021.1
 requests==2.26.0
